# rawtherapee-mcp-server

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml  publish-docker.yml  publish-pypi.yml
docs/: ARCHITECTURE.md  CLIENT_COMPATIBILITY.md  DEVELOPMENT.md  TROUBLESHOOTING.md  WORKFLOWS.md
src/rawtherapee_mcp/: __init__.py  __main__.py  config.py  device_presets.py  exif_reader.py  histogram.py  image_utils.py  lensfun.py  locallab.py  metadata.py  pp3_generator.py  pp3_parser.py  profile_hierarchy.py  rt_cli.py  server.py
src/rawtherapee_mcp/templates/: bw_classic.pp3  moody_cinematic.pp3  neutral.pp3  vivid_pet.pp3  warm_portrait.pp3
tests/: conftest.py  test_config.py  test_device_presets.py  test_exif_reader.py  test_exif_recommendations.py  test_histogram.py  test_image_utils.py  test_lens_correction.py  test_lensfun.py  test_locallab.py  test_lut.py  test_metadata.py  test_pp3_generator.py  test_pp3_parser.py  test_profile_hierarchy.py  test_rt_cli.py  test_server.py
tests/fixtures/: sample.pp3
